fixed alignment of list items

--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -134,8 +134,8 @@ h4{
 
 ul {
     /* list-style-type: none;  */
-    padding: 0;
-    margin: 0;
+    padding-left: 10;
+    margin: 10;
     display: flex;
     flex-direction: column; /* Stack items vertically */
     align-items: flex-start;
